force-app/main/default/objects/AC_Skill_Assigned__c/AC_Skill_Assigned__c.object-meta.xml
<CustomObject>
    <label>AC Skill Assigned</label>
    <nameField>
        <displayFormat>ASN-{00000}</displayFormat>
        <label>AC Skill Assigned Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills Assigned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>