force-app/main/default/objects/AC_Skill_Assigned__c/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <label>Proficiency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>