force-app/main/default/objects/AC_Skill_Assigned__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>AC_Skill__c</referenceTo>
    <relationshipName>Skills_Assigned</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>