force-app/main/default/objects/AC_Skill_Assigned__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>