force-app/main/default/objects/AC_Skill_Assigned__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>AC Technician</label>
    <referenceTo>AC_Technician__c</referenceTo>
    <relationshipName>Skills_Assigned</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>